--- a/src/main/resources/templates/Currently_Reading_Cards.html
+++ b/src/main/resources/templates/Currently_Reading_Cards.html
@@ -31,104 +31,6 @@
             </div>
         </div>
 
-        <style>
-            .card_cr {
-                display: inherit;
-                flex-wrap: wrap;
-                border-radius: 4px;
-                margin: 10px;
-                box-shadow: var(--elevation--z4);
-                width: 300px;
-                box-sizing: border-box;
-            }
-            .card-content_cr {
-                height: 150px;
-                width: calc(100% - 100px);
-                padding: 10px;
-                box-sizing: border-box;
-                border-top-right-radius: inherit;
-                background-color: var(--secondary-light);
-            }
-            .card-content_cr h4 a {
-                color: var(--secondary-light-text-black);
-            }
-            .card-content_cr h4 a:hover {
-                color: var(--primary-color);
-            }
-            .card-content_cr p a {
-                color: var(--secondary-text-black);
-            }
-            .card-content_cr p a:hover {
-                color: var(--primary-light);
-            }
-            .card-content_cr hr {
-                margin: 5px -10px;
-            }
-            .card-img-container_cr {
-                height: 150px;
-                width: 100px;
-                border-top-left-radius: inherit;
-            }
-
-            .card_cr_details {
-                background-color: var(--secondary-light);
-                width: 100%;
-                border-bottom-left-radius: inherit;
-                border-bottom-right-radius: inherit;
-                border-top: 1px solid #eee;
-                height: 70px;
-            }
-            .card_cr_details p {
-                padding-left: 5px;
-                margin: 3px 0px;
-            }
-            .cr_details_info {
-                display: flex;
-                justify-content: space-between;
-            }
-            .cr_details_info label {
-                font-weight: normal;
-            }
-            .progress {
-                border-top-right-radius: 0px;
-                border-top-left-radius: 0px;
-            }
-            .cr_details_info-btn-div {
-                height: 50px;
-                width: 100px;
-            }
-            .cr_details_info-btn-div button{
-                margin-left: 17%;
-                margin-top: 9%;
-            }
-            .btn_cr {
-                padding: 6px 12px !important;
-                margin-bottom: 0 !important;
-                background-color: var(--primary-color);
-                border-color: transparent;
-            }
-            .btn_cr:hover {
-                background-color: var(--secondary-dark);
-                border-color: transparent;
-                color: var(--secondary-text-black);
-            }
-            .progress-bar {
-                min-width: 25px;
-            }
-            #updateModal .control-label {
-                padding-top: 14px
-            }
-            #updateModal .input-group-btn .btn {
-                border-top-left-radius: 0px;
-                border-bottom-left-radius: 0px;
-            }
-            @media (max-width: 676px) {
-                .card_cr {
-                    width: 100%;
-                }
-            }
-        </style>
-
         <div class="card_cr" th:each="book,iter :${results}">
             <input th:id="'update-buid_'+${iter.index}" type="hidden" th:value="${book.buid}"/>
             <input th:id="'update-pageCount_'+${iter.index}" type="hidden" th:value="${book.pageCount}"/>
@@ -149,14 +51,14 @@
                     </div>
                 </div>
                 <div class="card-footer">
-                    <small class="date" th:text="${book.dateCreated}"></small>
+                    <small class="date" th:text="${#dates.format(book.dateCreated, 'MMM dd yyyy')}"></small>
                     <small class="page-count" th:text="${book.pageCount}"></small>
                 </div>
             </div>
             <div class="card_cr_details">
                 <div class="cr_details_info">
                     <div>
-                        <p><label>Date Started:</label><span th:text="'  '+${book.dateStarted}"></span></p>
+                        <p><label>Date Started:</label><span th:text="'  '+${#dates.format(book.dateStarted, 'MMM dd yyyy')}"></span></p>
                         <p><label>Current Page:</label><span th:id="'update-current_'+${iter.index}" th:text="'  '+${book.currentPage}"></span></p>
                     </div>
                     <div class="cr_details_info-btn-div">
