--- a/src/main/resources/templates/Layout.html
+++ b/src/main/resources/templates/Layout.html
@@ -10,8 +10,12 @@
     <!--[if lt IE 9]>
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" th:href="@{/img/favicon/favicon.ico}" />
+    <link rel="icon" type="image/png" href="/img/favicon/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="/img/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="/img/favicon/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/img/favicon/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="/img/favicon/favicon-128.png" sizes="128x128" />
+
     <link href="/css/styles.css" rel="stylesheet" />
 </head>
 
@@ -26,7 +30,7 @@
         <div class="navigation-right">
             <div class="navigation-search hidden-xs">
                 <div class="input-group">
-                    <input id="search-input" type="text" class="form-control" placeholder="Search" />
+                    <input id="search-input" type="text" class="form-control"/>
                     <div class="input-group-btn">
                         <button id="submit-btn" class="btn btn-default" type="submit">
                             <i class="glyphicon glyphicon-search"></i>
@@ -50,7 +54,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-search hidden-sm hidden-md hidden-lg">
                     <div class="input-group">
-                        <input id="search-input-nav" type="text" class="form-control" placeholder="Search" />
+                        <input id="search-input-nav" type="text" class="form-control" />
                         <div class="input-group-btn">
                             <button id="submit-btn-nav" class="btn btn-default" type="submit">
                                 <i class="glyphicon glyphicon-search"></i>
