--- a/src/main/resources/templates/Layout.html
+++ b/src/main/resources/templates/Layout.html
@@ -4,6 +4,8 @@
 <head lang="en">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta charset="utf-8" />
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <title>Bookcase</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link href="/css/bootstrap.min.css" rel="stylesheet" />
@@ -30,7 +32,7 @@
         <div class="navigation-right">
             <div class="navigation-search hidden-xs">
                 <div class="input-group">
-                    <input id="search-input" type="text" class="form-control"/>
+                    <input id="search-input" type="text" class="form-control input-fix"/>
                     <div class="input-group-btn">
                         <button id="submit-btn" class="btn btn-default" type="submit">
                             <i class="glyphicon glyphicon-search"></i>
@@ -54,7 +56,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-search hidden-sm hidden-md hidden-lg">
                     <div class="input-group">
-                        <input id="search-input-nav" type="text" class="form-control" />
+                        <input id="search-input-nav" type="text" class="form-control input-fix" />
                         <div class="input-group-btn">
                             <button id="submit-btn-nav" class="btn btn-default" type="submit">
                                 <i class="glyphicon glyphicon-search"></i>
@@ -63,32 +65,32 @@
                     </div>
                 </li>
                 <li>
-                    <a th:href="@{/books}" title="My Books">
+                    <a th:href="@{/list/myBooks}" title="My Books">
                         <span class="title-span">My Books</span>
                         <span id="all-badge" class="badge" th:text="${numMap.get('All')}"></span>
                     </a>
                 </li>
                 <li>
-                    <a th:href="@{/perm/CR}" title="Currently Reading">
+                    <a th:href="@{/list/reading}" title="Currently Reading">
                         <span class="title-span">Currently Reading</span>
                         <span id="cr-badge" class="badge" th:text="${numMap.get('CR')}"></span>
                     </a>
                 </li>
                 <li>
-                    <a th:href="@{/perm/TR}" title="To Read">
+                    <a th:href="@{/list/toRead}" title="To Read">
                         <span class="title-span">To Read</span>
                         <span id="tr-badge" class="badge" th:text="${numMap.get('TR')}"></span>
                     </a>
                 </li>
                 <li>
-                    <a th:href="@{/perm/R}" title="Completed">
+                    <a th:href="@{/list/completed}" title="Completed">
                         <span class="title-span">Completed</span>
                         <span id="r-badge" class="badge" th:text="${numMap.get('R')}"></span>
                     </a>
                 </li>
                 <hr class="sidebar-nav__separator" />
                 <li th:each="shelf,iter :${shelves}">
-                    <a th:href="@{'/getShelf/'+ ${shelf[0]}}" th:title="${shelf[0]}">
+                    <a th:href="@{/list/shelf(name=${shelf[0]})}" th:title="${shelf[0]}">
                         <span th:text="${shelf[0]}" class="title-span"></span>
                         <span th:id="'sidebar'+${iter.index}" class="badge" th:text="${shelf[1]-1}"></span>
                     </a>
@@ -118,7 +120,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button id="saveNewShelf" type="button" class="btn btn-primary" onclick="saveShelf()">Save</button>
+                    <button id="saveNewShelf" type="button" class="btn btn-primary" onclick="save_shelf()">Save</button>
                 </div>
             </div>
         </div>
