--- a/src/main/resources/templates/Layout.html
+++ b/src/main/resources/templates/Layout.html
@@ -24,7 +24,7 @@
 <body>
     <nav class="navigation">
         <div class="navigation-left">
-            <div class="sidebar-open-icon" onclick="showHide()">
+            <div class="sidebar-open-icon" onclick="show_hide()">
                 <i class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></i>
             </div>
             <h2 class="navigation-brand navigation-item">Bookcase</h2>
