--- a/src/main/resources/templates/Layout.html
+++ b/src/main/resources/templates/Layout.html
@@ -8,8 +8,8 @@
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <title>Bookcase</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="mobile-web-app-capable" content="yes"/>
     <link href="/css/bootstrap.min.css" rel="stylesheet" />
     <!--[if lt IE 9]>
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
