--- a/src/main/resources/templates/Layout.html
+++ b/src/main/resources/templates/Layout.html
@@ -58,7 +58,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-search hidden-sm hidden-md hidden-lg">
                     <div class="input-group">
-                        <input id="search-input-nav" type="text" class="form-control input-fix" />
+                        <input id="search-input-nav" type="text" class="form-control" />
                         <div class="input-group-btn">
                             <button id="submit-btn-nav" class="btn btn-default" type="submit">
                                 <i class="glyphicon glyphicon-search"></i>
