--- a/src/main/resources/templates/Layout.html
+++ b/src/main/resources/templates/Layout.html
@@ -34,13 +34,15 @@
         <div class="navigation-right">
             <div class="navigation-search hidden-xs">
                 <div class="input-group">
-                    <input id="search-input" type="text" class="form-control input-fix"/>
+                    <input id="search-input" list="res" type="text" class="form-control input-fix" autocomplete="off"/>
+                    <datalist id="res"></datalist>
                     <div class="input-group-btn">
                         <button id="submit-btn" class="btn btn-default" type="submit">
                             <i class="glyphicon glyphicon-search"></i>
                         </button>
                     </div>
                 </div>
+                <datalist id="res"></datalist>
             </div>
             <div class="dropdown">
                 <button class="btn btn-link dropdown-toggle user-icon-btn" type="button" id="user-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
