--- a/src/main/resources/templates/Cards.html
+++ b/src/main/resources/templates/Cards.html
@@ -70,8 +70,8 @@
             <div class="card-img-container"><img class="card-img" th:src="${book.imageUrl}"/></div>
             <div class="card-content">
                 <div class="card-details-container">
-                    <div class="card-title limit-2">
-                        <h4><a th:href="@{'/book/info/'+${book.isbn13}}" th:text="${book.title}" th:title="${book.title}"></a></h4>
+                    <div class="card-title">
+                        <h4><a class="limit-2" th:href="@{'/book/info/'+${book.isbn13}}" th:text="${book.title}" th:title="${book.title}"></a></h4>
                     </div>
                     <hr/>
                     <div class="card-author limit-2">
